--- a/PMS/accounts/templates/accounts/studentinfo_detail.html
+++ b/PMS/accounts/templates/accounts/studentinfo_detail.html
@@ -11,9 +11,7 @@
 <title> LNNCHS Payment Monitoring System Admin</title>
 </head>
 <body>
-	<p>{{ student.student_lastname }}, {{ student.student_firstname }},
-		<!-- {{ object.student_middlename }}, {{ object.student_birthday }},
-		{{ object.student_year }}, {{ object.student_guardian}} -->
+	<p>ID: {{ student.student_id }} || Lastname: {{ student.student_lastname }} || Firstname: {{ student.student_firstname }}
 
 	</p>
 	<a href="/accounts/home">Back</a>
