--- a/PMS/accounts/templates/accounts/viewallstudents.html
+++ b/PMS/accounts/templates/accounts/viewallstudents.html
@@ -1,5 +1,5 @@
 {%for object in object_list%}
 
-<li>{{object.student_id}}   {{object.student_lastname}}, {{object.student_firstname}}, {{object.student_middlename}}</li> 
+<li>Student ID: {{object.student_id}} || Lastname:  {{object.student_lastname}} || Firstname: {{object.student_firstname}} || Middlename: {{object.student_middlename}}</li> 
 
 {%endfor%}
